# Incharj

./: .env.example  .gitignore  404.html  FEATURES.md  Makefile  README.md  architecture-diagram.html  architecture.html  auth.html  core-chunking.html  core-connectors.html  core-indexing.html  core-normalization.html  core-orchestration.html  core-permissions.html  docker-compose.dev.yml  docker-compose.yml  feature-ideas.html  getting-started.html  hashmap.json  index.html  indexer.html  nginx.conf  package-lock.json  package.json  search.html
backend/: .env.example  Dockerfile  README.md  bull-board.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: main.py
backend/app/ai/: embedder.py  types.py
backend/app/connectors/: plugin_types.py  registry.py
backend/app/constants/: auth.py
backend/app/core/: config.py  logging.py
backend/app/db/: pool.py  session.py  tables.py
backend/app/indexing/: indexer.py
backend/app/normalization/: normalizer.py
backend/app/permissions/: validator.py
backend/app/routes/: auth.py  connectors.py  documents.py  orgs.py  router.py  search.py  setup.py  slack.py  sync.py
backend/app/schemas/: auth.py  connector.py  org.py
backend/app/services/: auth_service.py  embedding_service.py  search_service.py
backend/app/sql/: checkpoints.py  indexer.py  invitations.py  orgs.py  schema.py  search.py  sync_jobs.py  users.py
backend/app/utils/: chunker.py  http.py  security.py  serialization.py
backend/src/: app.ts  config.ts  db.ts  errors.ts  server.ts  types.ts  worker.ts
docs/: Dockerfile  (+25 more)
(+435 files in other folders)
